[package]
name = "vpxenc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libivf-rs = { git = "https://github.com/tetsu-koba/libivf-rs.git"}
vpx-encode = { version = "0.6.2", features=["vp9"] }
env-libvpx-sys = {version = "5.1.2", features = ["generate"]}
nix = "0.26.4"
libc = "0.2.147"